[package]
name = "fraccionamiento_api"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
actix-cors = "0.7"
dotenvy = "0.15"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
sqlx = { version = "0.7.4", features = [
  "runtime-tokio-rustls",
  "postgres",
  "chrono"
] }
yup-oauth2 = "9"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
stripe = { package = "async-stripe", version = "0.40.2", features = ["runtime-tokio-hyper-rustls"] }
